# nexuseval

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  reproduce_scalability.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: basic_evaluation.py  dataset_management.py
src/nexuseval/: __init__.py  cache.py  config.py  core.py  dataset.py  embeddings.py  llm.py  retry.py  runner.py  templates.py
src/nexuseval/metrics/: __init__.py  advanced.py  custom_template.py  registry.py  standard.py
src/nexuseval/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  registry.py
tests/: test_advanced_metrics.py  test_cache.py  test_config.py  test_core.py  test_dataset.py  test_providers.py
