[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexuseval"
version = "0.1.0"
description = "An open-source LLM evaluation framework."
authors = [{name = "Shubham Salokhe", email = "shubhamsalokhe@ymail.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["llm", "evaluation", "hallucination", "rag", "ai", "testing", "openai"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "openai",
  "tqdm",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/ShubhamSalokhe/nexuseval"
Issues = "https://github.com/ShubhamSalokhe/nexuseval/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/nexuseval"]